# SUSTech_CS205_Projects

./: README.md
.github/workflows/: build.yml
Project1_Calculator/: CMakeLists.txt  README.md  abi.cpp  correctness_test.py  mul.cpp  mul_alternative_1.cpp  mul_alternative_2.cpp  mul_benchmark.cpp  mul_test.cpp
Project2_CalculatorEx/: CMakeLists.txt  README.md
Project2_CalculatorEx/src/: CMakeLists.txt  constant.cpp  constant.h  context.cpp  context.h  error.h  eval.cpp  eval.h  main.cpp  node.cpp  node.h  number.cpp  number.h  parse.cpp  parse.h  token.cpp  token.h
Project2_CalculatorEx/test/: CMakeLists.txt  number_test.cpp  parse_test.cpp  test.hpp  token_test.cpp
Project3_Matrix/: CMakeLists.txt  Doxyfile.in  README.md  example.c  matrix.c  matrix.h
Project3_Matrix/test/: CMakeLists.txt  test.cpp  test.h  test_allocate.cpp  test_arithm.cpp  test_basic_op.cpp  test_getter.cpp  test_io.cpp  test_reduce.cpp  test_scale.cpp
Project4_MatrixMultiplication/: CMakeLists.txt  README.md
Project4_MatrixMultiplication/src/: CMakeLists.txt  matrix.c  matrix.h  mul.c
Project4_MatrixMultiplication/test/: CMakeLists.txt  benchmark.cpp
Project5_MatrixClass/: CMakeLists.txt  README.md  example.cpp  matrix.hpp
